--- a/index.html
+++ b/index.html
@@ -193,11 +193,14 @@
                     <i style="color: #f0ac18;" class="fa fa-chain" aria-hidden="true"></i> TECHNICAL SKILLS
                 </h6>
                 <ul class="ulhv" style="list-style-type:circle; font-size: medium;">
-                    <li>HTML5/ CSS3</li>
+                    <li>HTML/CSS</li>
                     <li>JAVASCRIPT</li>
+                    <li>ReactJs</li>
                     <li>PHP</li>
-                    <li>ASP.net [web form]</li>
+                    <li>Laravel</li>
                     <li>SQL</li>
+                    <li>WordPress</li>
+                    <li>Bootstrab</li>
                     <li>EXCEL</li>
                 </ul>
                 <hr>
