--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <ul style="font-size: medium; list-style-type: circle;">
 
                     <li> Customer service representative <br> (inbound and outbound calls-ecommerce accounts)
-                        <br> Extensya company. <br> Irbid-Jordan <br> [April/2019-May/2020]
+                        <br> Extensya company. <br> Amman-Jordan <br> [April/2019-May/2020]
                     </li>
                 </ul>
                 <hr>
