--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 and make it responsive design with all devices to be accessible to all users regardless of their
                 devices. <br><br>
 
-                <a href="Resume/AhmadAlkhalafCV.docx" download>
+                <a href="Resume/Ahmad'sResume.pdf" download>
                     <button class="INbtn"><i class="fa fa-download"></i> download CV</button></a>
 
             </div>
